@@ -1,3 +1,8 @@
+2006-01-14  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.c:
+	Fix state change detection and the timeout.
+
 2006-01-13  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extractor.c:
